core/phpipam/deployment.yaml
---
# Source: phpipam/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpipam-web
  labels:
    app: phpipam
    component: web
    part-of: phpipam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: web
  template:
    metadata:
      name: phpipam-web
      namespace: phpipam
      labels:
        app: phpipam
        component: web
    spec:
      containers:
        - name: phpipam-web
          image: "phpipam/phpipam-www:v1.7.3"
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 32Mi
---
# Source: phpipam/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpipam-cron
  labels:
    app: phpipam
    component: cron
    part-of: phpipam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: cron
  template:
    metadata:
      name: phpipam-cron
      labels:
        app: phpipam
        component: cron
    spec:
      containers:
        - name: phpipam-cron
          image: "phpipam/phpipam-cron:v1.7.3"
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 32Mi
---
# Source: phpipam/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpipam-db
  labels:
    app: phpipam
    component: mysql
    part-of: phpipam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: mysql
  template:
    metadata:
      name: phpipam-db
      labels:
        app: phpipam
        component: mysql
    spec:
      containers:
        - name: phpipam-db
          image: "mariadb:11.4.4"
          ports:
            - containerPort: 3306
              protocol: TCP
              name: mysql
          volumeMounts:
            - name: phpipam-mysql
              mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 128Mi
      volumes:
        - name: phpipam-mysql
          persistentVolumeClaim:
            claimName: phpipam-mysql
