core/phpipam/phpipam-cron-deployment.yaml
---
# Source: phpipam/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpipam-cron
  labels:
    app: phpipam
    component: cron
    part-of: phpipam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: cron
  template:
    metadata:
      name: phpipam-cron
      labels:
        app: phpipam
        component: cron
    spec:
      containers:
        - name: phpipam-cron
          image: "phpipam/phpipam-cron:v1.7.3"
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 32Mi
