core/phpipam/phpipam-web-deployment.yaml
---
# Source: phpipam/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpipam-web
  labels:
    app: phpipam
    component: web
    part-of: phpipam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: web
  template:
    metadata:
      name: phpipam-web
      namespace: phpipam
      labels:
        app: phpipam
        component: web
    spec:
      containers:
        - name: phpipam-web
          image: "phpipam/phpipam-www:v1.7.3"
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 32Mi
